tests/baselines/reference/numericIndexingResults.errors.txt
numericIndexingResults.ts(8,10): error TS2454: Variable 'c' is used before being assigned.
numericIndexingResults.ts(9,10): error TS2454: Variable 'c' is used before being assigned.
numericIndexingResults.ts(10,10): error TS2454: Variable 'c' is used before being assigned.
numericIndexingResults.ts(11,10): error TS2454: Variable 'c' is used before being assigned.
numericIndexingResults.ts(12,10): error TS2454: Variable 'c' is used before being assigned.
numericIndexingResults.ts(13,10): error TS2454: Variable 'c' is used before being assigned.
numericIndexingResults.ts(22,10): error TS2454: Variable 'i' is used before being assigned.
numericIndexingResults.ts(23,10): error TS2454: Variable 'i' is used before being assigned.
numericIndexingResults.ts(24,10): error TS2454: Variable 'i' is used before being assigned.
numericIndexingResults.ts(25,10): error TS2454: Variable 'i' is used before being assigned.
numericIndexingResults.ts(26,10): error TS2454: Variable 'i' is used before being assigned.
numericIndexingResults.ts(27,10): error TS2454: Variable 'i' is used before being assigned.
numericIndexingResults.ts(35,10): error TS2454: Variable 'a' is used before being assigned.
numericIndexingResults.ts(36,10): error TS2454: Variable 'a' is used before being assigned.
numericIndexingResults.ts(37,10): error TS2454: Variable 'a' is used before being assigned.
numericIndexingResults.ts(38,10): error TS2454: Variable 'a' is used before being assigned.
numericIndexingResults.ts(39,10): error TS2454: Variable 'a' is used before being assigned.
numericIndexingResults.ts(40,10): error TS2454: Variable 'a' is used before being assigned.


==== numericIndexingResults.ts (18 errors) ====
    class C {
        [x: number]: string;
        1 = '';
        "2" = ''
    }
    
    var c: C;
    var r1 = c['1'];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r2 = c['2'];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r3 = c['3'];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r4 = c[1];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r5 = c[2];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r6 = c[3];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        [x: number]: string;
        1: string;
        "2": string;
    }
    
    var i: I
    var r1 = i['1'];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2 = i['2'];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r3 = i['3'];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r4 = i[1];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r5 = i[2];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r6 = i[3];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        [x: number]: string;
        1: string;
        "2": string;
    }
    
    var r1 = a['1'];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r2 = a['2'];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r3 = a['3'];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r4 = a[1];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r5 = a[2];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r6 = a[3];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    var b: { [x: number]: string } = { 1: '', "2": '' }
    var r1a = b['1'];
    var r2a = b['2'];
    var r3 = b['3'];
    var r4 = b[1];
    var r5 = b[2];
    var r6 = b[3];
    
    var b2: { [x: number]: string; 1: string; "2": string; } = { 1: '', "2": '' }
    var r1b = b2['1'];
    var r2b = b2['2'];
    var r3 = b2['3'];
    var r4 = b2[1];
    var r5 = b2[2];
    var r6 = b2[3];